# DVBench

./: .gitignore  README.md  pyproject.toml
all_experiments/table1_main_performance/model_configs/hf/: config_chat_uni_vi_13b.py  config_chat_uni_vi_7b.py  config_llama_vid_13b.py  config_llama_vid_7b.py  config_pllava_13b.py  config_pllava_34b.py  config_pllava_7b.py  (+2 more)
all_experiments/table1_main_performance/question_bank/: dvbench_raw_metadata.json  question_bank_1000.jsonl
dvbench/benchmarking/: auto_accuracy.py  calc_accuracy.py  calc_performance.py  evaluate.py  extract_responses.py  question_counter.py  run.py  run_evaluation.py
dvbench/inference/configs/: app.py
dvbench/inference/models/: base.py  index.py  model_test.py
dvbench/inference/ultils/: video_processing.py
dvbench/visual_processing/: __init__.py  image_processing.py  video_processing.py  video_processing_interface.py  video_reader.py
envs/: driving_vllm_bench_chatunivi.yml  driving_vllm_bench_chatunivi_vllm.yml  driving_vllm_bench_llamavid.yml  driving_vllm_bench_minicpmv.yml  driving_vllm_bench_pllava.yml  driving_vllm_bench_videochat2.yml  driving_vllm_bench_videochatgpt.yml  driving_vllm_bench_vllm_latest.yml
scripts/hf/: chat_uni_vi_13b.sh  chat_uni_vi_7b.sh  llama_vid_13b.sh  llama_vid_7b.sh  pllava_13b.sh  pllava_34b.sh  pllava_7b.sh  video_chatgpt_7b.sh  video_llava_7b.sh
scripts/vllm/: llava_next_video_34b.sh  llava_next_video_7b.sh  llava_onevision_0_5b.sh  llava_onevision_72b.sh  llava_onevision_7b.sh  minicpmv.sh  qwen2_vl_2b.sh  qwen2_vl_72b.sh  qwen2_vl_7b.sh
(+39 files in other folders)
